package com.parqueamesta.model;

public abstract class Usuario {
}
